# libacvp

./: .cproject  .gitignore  .project  COPYING  Doxyfile  DoxygenLayout.xml  LICENSE  Makefile  Makefile.am  Makefile.fom  Makefile.in  Makefile.murl  Makefile.win  README  README.md  aclocal.m4  acvp.c  acvp.h  acvp_aes.c  acvp_app  acvp_lcl.h  acvp_transport.c  acvp_util.c  app_main.c  build.gradle  configure  configure.ac  doxygen.cfg  flake.nix  intro.txt  migration_guide.md  test.java  test1.JSON
app/: Makefile.am  Makefile.in  README  README.pkcs11  app_aes.c  app_cli.c  app_cmac.c  app_des.c  app_drbg.c  app_dsa.c  app_ecdsa.c  app_eddsa.c  app_fips_init_lcl.h  app_fips_lcl.h  app_hmac.c  app_kas.c  app_kas_kdf.c  app_kda.c  app_kdf.c  app_kmac.c  app_lcl.h  app_lms.c  app_main.c  app_pkcs11.c  app_rsa.c  app_sha.c  app_utils.c  ketopt.h  libacvp_app.h  loader.h  pkcs11_lcl.h  pkcs11_server.c  pkcs11_server.h  poc.json
app/implementations/: README.md
app/implementations/jitter_entropy/: README.md  iut.c
app/implementations/liboqs/: README.md  iut.c  iut.h  iut_ml_dsa.c  iut_ml_kem.c  iut_slh_dsa.c
app/implementations/openssl/: README.md
app/implementations/stubs/: README.md  stub_kdf.c  stub_lms.c  stub_misc.c  stub_ml_dsa.c  stub_ml_kem.c
app/totp/: hmac_sha256.c  hmac_sha256.h  sha256.c  sha256.h  totp.c
safe_c_stub/lib/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  acvp.c  acvp.h  acvp_aes.c  acvp_ascon.c  acvp_build_register.c  acvp_capabilities.c  acvp_cmac.c  acvp_cshake.c  acvp_des.c  acvp_drbg.c  acvp_dsa.c  acvp_ecdsa.c  acvp_eddsa.c  acvp_hash.c  acvp_hash_mct.c  acvp_hmac.c  acvp_kas_ecc.c  acvp_kas_ffc.c  acvp_kas_ifc.c  acvp_kas_kdf.c  acvp_kda.c  acvp_kdf108.c  acvp_kdf135_ikev1.c  acvp_kdf135_ikev2.c  acvp_kdf135_snmp.c  acvp_kdf135_srtp.c  acvp_kdf135_ssh.c  acvp_kdf135_tls.c  acvp_kdf135_tpm.c  acvp_kdf135_x942.c  acvp_kdf135_x963.c  acvp_kdf_tls12.c  acvp_kdf_tls13.c  acvp_kmac.c  acvp_kts_ifc.c  acvp_lcl.h  acvp_lms.c  acvp_ml_dsa.c  (+14 more)
test/: Makefile  Makefile.am  Makefile.in  README.md  app_common.c  app_common.h  create_session.c  register_hash.c  run_all_tests.c  run_lib_tests.c  test_acvp.c  test_acvp_aes.c  test_acvp_build_register.c  test_acvp_capabilities.c  test_acvp_cmac.c  test_acvp_des.c  test_acvp_drbg.c  test_acvp_dsa.c  test_acvp_ecdsa.c  test_acvp_hash.c  test_acvp_hmac.c  test_acvp_kas_ecc.c  test_acvp_kas_ffc.c  test_acvp_kas_ifc.c  test_acvp_kas_kdf.c  test_acvp_kda.c  test_acvp_kdf108.c  test_acvp_kdf135_ikev1.c  test_acvp_kdf135_ikev2.c  test_acvp_kdf135_snmp.c  test_acvp_kdf135_srtp.c  test_acvp_kdf135_ssh.c  test_acvp_kdf135_tls.c  test_acvp_kdf135_x963.c  test_acvp_kdf_tls12.c  test_acvp_kdf_tls13.c  test_acvp_kmac.c  test_acvp_kts_ifc.c  test_acvp_operating_env.c  test_acvp_pbkdf.c  (+26 more)
test/json/: generate_json.py  meta.json  put.json  req.json  rsp.json  testSession_0.json
test/json/aes/: README.md  __init__.py  aes.json  aes.py  aes_1.json  aes_10.json  aes_11.json  aes_12.json  aes_13.json  aes_14.json  aes_15.json  aes_16.json  aes_17.json  aes_18.json  aes_19.json  aes_2.json  aes_20.json  aes_21.json  aes_22.json  aes_23.json  aes_24.json  aes_25.json  aes_26.json  aes_27.json  aes_28.json  aes_29.json  aes_3.json  aes_30.json  aes_31.json  aes_32.json  aes_33.json  aes_34.json  aes_4.json  aes_5.json  aes_6.json  aes_7.json  aes_8.json  aes_9.json  aes_reg_good.json
test/json/cmac/: README.md  __init__.py  cmac_aes.json  cmac_aes.py  cmac_aes_1.json  cmac_aes_10.json  cmac_aes_11.json  cmac_aes_12.json  cmac_aes_2.json  cmac_aes_3.json  cmac_aes_4.json  cmac_aes_5.json  cmac_aes_6.json  cmac_aes_7.json  cmac_aes_8.json  cmac_aes_9.json  cmac_reg_good.json  cmac_tdes.json  cmac_tdes.py  cmac_tdes_1.json  cmac_tdes_10.json  cmac_tdes_11.json  cmac_tdes_12.json  cmac_tdes_2.json  cmac_tdes_3.json  cmac_tdes_4.json  cmac_tdes_5.json  cmac_tdes_6.json  cmac_tdes_7.json  cmac_tdes_8.json  cmac_tdes_9.json
test/json/des/: README.md  __init__.py  des.json  des.py  des_1.json  des_10.json  des_11.json  des_12.json  des_13.json  des_14.json  des_15.json  des_16.json  des_17.json  des_18.json  des_19.json  des_2.json  des_20.json  des_21.json  des_22.json  des_3.json  des_4.json  des_5.json  des_6.json  des_7.json  des_8.json  des_9.json  des_reg_good.json
test/json/drbg/: README.md  __init__.py  drbg.json  drbg.py  drbg_1.json  drbg_10.json  drbg_11.json  drbg_12.json  drbg_13.json  drbg_14.json  drbg_15.json  drbg_16.json  drbg_19.json  drbg_2.json  drbg_20.json  drbg_21.json  drbg_22.json  drbg_23.json  drbg_24.json  drbg_25.json  drbg_26.json  drbg_27.json  drbg_28.json  drbg_29.json  drbg_3.json  drbg_30.json  drbg_31.json  drbg_32.json  drbg_33.json  drbg_34.json  drbg_4.json  drbg_5.json  drbg_6.json  drbg_7.json  drbg_8.json  drbg_9.json  drbg_reg_good.json
test/json/dsa/: dsa_keygen1.json  dsa_keygen2.json  dsa_keygen3.json  dsa_keygen4.json  dsa_keygen5.json  dsa_keygen6.json  dsa_keygen7.json  dsa_keygen8.json  dsa_keygen9.json  dsa_pqggen1.json  dsa_pqggen11.json  dsa_pqggen12.json  dsa_pqggen13.json  dsa_pqggen14.json  dsa_pqggen15.json  dsa_pqggen2.json  dsa_pqggen3.json  dsa_pqggen4.json  dsa_pqggen5.json  dsa_pqggen6.json  dsa_pqggen7.json  dsa_pqggen8.json  dsa_pqggen9.json  dsa_pqgver1.json  dsa_pqgver10.json  dsa_pqgver11.json  dsa_pqgver12.json  dsa_pqgver13.json  dsa_pqgver14.json  dsa_pqgver15.json  dsa_pqgver16.json  dsa_pqgver2.json  dsa_pqgver3.json  dsa_pqgver4.json  dsa_pqgver5.json  dsa_pqgver6.json  dsa_pqgver7.json  dsa_pqgver8.json  dsa_pqgver9.json  dsa_reg_good.json  (+30 more)
test/json/ecdsa/: README.md  __init__.py  ecdsa.py  ecdsa_1.json  ecdsa_10.json  ecdsa_11.json  ecdsa_12.json  ecdsa_13.json  ecdsa_14.json  ecdsa_15.json  ecdsa_16.json  ecdsa_17.json  ecdsa_18.json  ecdsa_19.json  ecdsa_2.json  ecdsa_3.json  ecdsa_4.json  ecdsa_5.json  ecdsa_6.json  ecdsa_7.json  ecdsa_8.json  ecdsa_9.json  ecdsa_keygen.json  ecdsa_keygen_1.json  ecdsa_keygen_2.json  ecdsa_keyver.json  ecdsa_keyver_1.json  ecdsa_keyver_2.json  ecdsa_reg_good.json  (+6 more)
test/unity/: unity_fixture.c
(+727 files in other folders)
